# yolov5_6.1-detect-with-C-

./: CMakeLists.txt  README.md  label.names  main.cpp
include/: yolov5_dnn.h
src/: yolov5_dnn.cpp
